# FaceForge

./: .gitignore  README.md  extract_data.py  gl_test.py  pyproject.toml
assets/: README.md  stl
assets/config/: body_joint_limits.json  body_poses.json  cardiac_additional.json  cns_additional.json  coordinate_transform.json  face_regions.json  intestinal.json  joint_limits.json  ligaments.json  oral.json  organs.json  pelvic_floor.json  skinning_overrides.json  teeth.json  vascular.json
assets/meshdata/: face.json  keyPoints.json  landmarks.json  mesh_data.json  skull.json
src/faceforge/: README.md  app.py  constants.py
src/faceforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md
tests/anatomy/: test_back_neck_muscles.py  test_bone_anchors.py  test_bone_collision.py  test_fascia.py  test_head_rotation.py  test_head_rotation_muscle.py  test_muscle_attachments.py  test_neck_muscle_pinning.py  (+1 more)
tools/: README.md  analyze_mesh_topology.py  bone_specificity.py  check_static.py  debug_arm_binding.py  debug_arm_hip_overlap.py  debug_arm_misbinding.py  debug_hip_misbinding.py  debug_pelvis.py  debug_platysma_fascia.py  debug_platysma_fascia_comparison.py  debug_platysma_minimal.py  debug_thigh_spikes.py  debug_zero_disp.py  detect_stuck.py  gender_scaling_test.py  head_renderer.py  head_rotation_diagnostic.py  head_rotation_test.py  headless_loader.py  mesh_renderer.py  run_skinning_diagnostic.py  scene_mode_diagnostic.py  skinning_scorer.py  test_boundary_smoothing.py  test_neighbor_clamp.py  visual_skinning_test.py
(+176 files in other folders)
